<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_number_of_counts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Número de cuentas"
        android:inputType="number" />

    <Switch
        android:id="@+id/switch_start_stop_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ini_fin" />

    <Switch
        android:id="@+id/switch_counter_bound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_counter" />

    <Button
        android:id="@+id/button_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_counter_bound" />

    <Button
        android:id="@+id/button_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_counter_bound" />


    <Button
        android:id="@+id/button_send_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

</LinearLayout>